# india-pincode-regex

./: .editorconfig  .gitattributes  .gitignore  .npmignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  HACKING.md  README.md  Rakefile  composer.json  package-lock.json  package.json  phpunit.xml  pincode-regex.js  pincode-validator.gemspec  pyproject.toml  regex.txt  regexes.txt
.github/workflows/: tests.yml
src/: Validator.php  generate.js  index.js  pincode_validator.rb
src/pincode/: __init__.py
src/pincode_validator/: version.rb
tests/: SimpleTest.php  browser-spec.js  index.html  test.py  validate.js  validate_spec.rb
