[project]
name = "pincode"
version = "1.0.4"
description = "A simple offline pincode validator for India"
authors = [
    {name = "Nemo", email = "python@captnemo.in"},
]
dependencies = ["requests"]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["pincode", "regex", "offline", "pin", "validator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
homepage = "https://github.com/captn3m0/india-pincode-regex"
Repository = "https://github.com/captn3m0/india-pincode-regex"
Documentation = "https://github.com/captn3m0/india-pincode-regex/wiki"

[tool.pdm]
includes = ["CHANGELOG.md", "README.md", "regex.txt", "src/pincode"]
excludes = [
    "src/*.js",
    "src/*.php",
    "tests/*.php",
    "tests/*.js",
    "tests/*.rb",
    "tests/*.html",
    "tests/jasmine*",
    "vendor/",
    "composer.",
    "package.json",
    "package-lock.json",
    "node_modules/"
    ]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
